<resources>
    <string name="app_name">PX4</string>
    <string name="title_home">Home</string>
    <string name="title_memu">校准</string>

    <string name="action">操作</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="turn_left">左转</string>
    <string name="turn_right">右转</string>

    <string name="go_left_right">左右 - 1</string>
    <string name="forward_backward">前后 - 2</string>
    <string name="accelerator">油门 - 3</string>
    <string name="turn_left_right">转向 - 4</string>
    <string name="model">模式</string>
    <string name="kill_switch">开关</string>

    <string name="calibration">校准</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="ip_address">IP地址</string>

    <string name="save_address_success">保存IP地址成功</string>
    <string name="save_address_fail">保存IP地址失败</string>


</resources>
