<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:kongqw="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context="com.example.wto.myapplication.MainActivity">

    <com.example.rockerview.RockerView
            android:id="@+id/no_click_seekbar_left"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin_left"
            android:layout_marginEnd="@dimen/activity_vertical_margin_right"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_alignParentBottom="true"
            kongqw:areaBackground="@drawable/default_area_bg"
            kongqw:rockerBackground="@drawable/default_rocker_bg"
            kongqw:rockerRadius="30dp" />
    <!--<com.example.wto.myapplication.compoment.NoClickSeekBar-->
            <!--android:id="@+id/no_click_seekbar_left"-->
            <!--android:layout_width="200dp"-->
            <!--android:layout_height="200dp"-->
            <!--android:layout_marginBottom="@dimen/activity_vertical_margin"-->
            <!--android:layout_marginStart="@dimen/activity_vertical_margin_left"-->
            <!--android:layout_marginEnd="@dimen/activity_vertical_margin_right"-->
            <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
            <!--android:thumbOffset="15dp"-->
            <!--android:thumb="@drawable/big_seekbar"-->
            <!--android:background="@drawable/circle"-->
            <!--android:secondaryProgress="@android:integer/status_bar_notification_info_maxnum"-->
            <!--android:layout_alignParentBottom="true"-->
    <!--/>-->


    <TextView
            android:id="@+id/no_click_seekbar_process_left"
            android:layout_alignEnd="@+id/no_click_seekbar_left"
            android:layout_alignTop="@+id/no_click_seekbar_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_home"
            android:gravity="center"
    />

    <TextView
            android:id="@+id/no_click_seekbar_process_right"
            android:layout_alignStart="@+id/no_click_seekbar_right"
            android:layout_alignTop="@+id/no_click_seekbar_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_home"
            android:gravity="center"
    />

    <com.example.wto.myapplication.compoment.NoClickSeekBarVertical
            android:id="@+id/no_click_seekbar_right"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin_left"
            android:layout_marginEnd="@dimen/activity_vertical_margin_right"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:thumbOffset="15dp"
            android:thumb="@drawable/big_seekbar"
            android:background="@drawable/circle"
            android:secondaryProgress="@android:integer/status_bar_notification_info_maxnum"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
    />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            >
        <Button
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:text="@string/turn_left"
                android:background="@drawable/button"
                />
        <Button
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:text="@string/turn_right"
                android:background="@drawable/button"
                />
    </LinearLayout>


</RelativeLayout>
